projects/ngx-testbox/testing/src/errors/ConflictingHttpInstructionParamsError.ts
export class ConflictingHttpInstructionParamsError extends Error {
  constructor() {
    super("HTTP instruction cannot have both 'delay' and 'timeline' parameters.");
  }
}
